--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="scroller">
             <div class="scroller-inner">
                 <img src="galery1.jpg" alt="Foto coding di laptop">
-                <img src="galery2.jpg" alt="Setup meja kerja dengan keyboard gaming">
+                <img src="galeryku2.jpg" alt="Setup meja kerja dengan keyboard gaming">
                 <img src="galery3.jpg" alt="Kode di layar monitor">
                 <img src="galery4.jpg" alt="Tampilan dekat kode HTML">
                 <img src="galery5.jpg" alt="Meja kerja dengan beberapa monitor">
