--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <div class="hero">
                 <div class="hero-content">
                     <h1>Subekti Bimo W.</h1>
-                    <div class="role">Web Developer</div>
+                    <div class="role">Web Developer | Backend Developer</div>
                     <p>I am a student at Sebelas Maret University majoring in Diploma Informatics Engineering. I am a web developer and backend developer with technologies used such as Laravel, Codeigniter, Flask, ExpressJs.</p>
-                    <a href="#contact" class="btn">Dowload Resume!</a>
+                    <a href="CV-BIMO.pdf" class="btn">Dowload Resume!</a>
                 </div>
                 <div class="hero-image">
                      <img src="profile.jpeg" alt="Foto Profil Subekti Bimo">
@@ -57,7 +57,7 @@
                 <div>
                     <h2 class="section-title">About Me</h2>
                     <div class="about-text">
-                        <p>I am a dedicated and versatile web developer or backend developer with a passion for creating efficient and user-friendly web applications. With a year of professional experience, I have worked with a variety of technologies, including Laravel, Codeigniter, ExpressJs, Node.js,and MySQL. My journey in web development began with a deep curiosity for how things work, and it has evolved into a career where I continuously strive to learn and adapt to new challenges. I thrive in collaborative environments and enjoy solving complex problems to deliver high-quality solutions. Outside of coding, I enjoy staying active, exploring new technologies, and contributing to open-source projects.</p>
+                        <p>I am a dedicated and versatile web developer or backend developer an interest in AI and Data Analytics. Over 2 years of experience developing web applications (Laravel, CodeIgniter, Flask, MySQL) and implementing Machine Learning for object detection, image classification, and data analysis (Python, TensorFlow, PyTorch, YOLO, Pandas). Familiar with data preprocessing, model training, AI integration, and data visualization. Adaptable, collaborative, and committed to delivering efficient and high-quality solutions.</p>
                     </div>
                 </div>
             </div>
@@ -83,27 +83,12 @@
                 <div class="experience-item animate-on-scroll">
                     <div class="exp-header">
                         <div>
-                            <div class="exp-title">Software Engineer - Internship</div>
-                            <div class="exp-company">PT. Gowa Modern Motor</div>
-                        </div>
-                        <div class="exp-date">July 2024 - Present</div>
-                    </div>
-                    <div class="exp-description">Developing backend systems using Laravel framework. Implementing RESTful APIs and database management for web applications. Collaborating with frontend developers to integrate user-facing elements.</div>
-                    <div class="tech-tags">
-                        <span class="tech-tag">Codeigniter</span>
-                        <span class="tech-tag">PHP</span>
-                        <span class="tech-tag">MySQL</span>
-                    </div>
-                </div>
-                <div class="experience-item animate-on-scroll">
-                    <div class="exp-header">
-                        <div>
                             <div class="exp-title">Private Tutor Class - Freelance</div>
                             <div class="exp-company">Bimbingan belajar private</div>
                         </div>
-                        <div class="exp-date">Oct 2024 - Jul 2025</div>
+                        <div class="exp-date">Oct 2024 - Now</div>
                     </div>
-                    <div class="exp-description">Learned cloud computing fundamentals and Google Cloud Platform services. Developed a capstone project (ReOil) that achieved Top 50 Best Product. Implemented machine learning models and backend services for mobile applications.</div>
+                    <div class="exp-description">Teaching the basics of web programming, including HTML, CSS, and JavaScript. In the teaching process, I provide an understanding of programming logic through practical exercises and simple case studies. In addition, I also guide participants to practice basic problem solving and debugging skills so that they can understand programming concepts in a more practical way.</div>
                     <div class="tech-tags">
                         <span class="tech-tag">Html</span>
                         <span class="tech-tag">CSS</span>
@@ -113,12 +98,27 @@
                 <div class="experience-item animate-on-scroll">
                     <div class="exp-header">
                         <div>
+                            <div class="exp-title">Software Engineer - Internship</div>
+                            <div class="exp-company">PT. Gowa Modern Motor</div>
+                        </div>
+                        <div class="exp-date">July 2024 - July 2025</div>
+                    </div>
+                    <div class="exp-description">Designing and building a centralized web-based reporting system used to support operations in 10 branch offices. In developing this system, I used CodeIgniter 4 as the main framework with the implementation of MVC architecture to ensure a more organized and manageable code structure. In addition, I also collaborated with the internal team to customize the system to suit the business needs and workflows of each branch office.</div>
+                    <div class="tech-tags">
+                        <span class="tech-tag">Codeigniter</span>
+                        <span class="tech-tag">PHP</span>
+                        <span class="tech-tag">MySQL</span>
+                    </div>
+                </div>
+                <div class="experience-item animate-on-scroll">
+                    <div class="exp-header">
+                        <div>
                             <div class="exp-title">Programming</div>
                             <div class="exp-company">PT. Garapan Indonesia Sukses</div>
                         </div>
-                        <div class="exp-date">Feb 2024 - Jun 2024</div>
+                        <div class="exp-date">Apr 2025 - Jun 2025</div>
                     </div>
-                    <div class="exp-description">Developing websites for clients using various technologies. Creating responsive designs and implementing backend functionality. Providing maintenance and updates for existing projects.</div>
+                    <div class="exp-description">Developing an IoT-based oyster mushroom cultivation monitoring system. This system integrates temperature and humidity sensors that function to automatically control pumps according to environmental parameters. In addition, I also created a web interface that allows users to monitor environmental conditions in real time and manually control watering if necessary.</div>
                     <div class="tech-tags">
                         <span class="tech-tag">HTML/CSS</span>
                         <span class="tech-tag">JavaScript</span>
@@ -140,7 +140,7 @@
                             <img src="project1.png" alt="Project E-commerce Thumbnail">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">E-commerce Application</h3>
+                            <h3 class="project-title">SmartVision</h3>
                             <p class="project-description">Membangun platform e-commerce responsif dengan fitur katalog produk, keranjang belanja, dan dashboard admin.</p>
                             <div class="tech-tags">
                                 <span class="tech-tag">Laravel</span>
@@ -155,7 +155,7 @@
                             <img src="project2.png" alt="Project School Management Thumbnail">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">School Management App</h3>
+                            <h3 class="project-title">GrowMatic</h3>
                             <p class="project-description">Membuat aplikasi manajemen sekolah untuk mengelola data siswa, guru, jadwal, dan nilai, dilengkapi dashboard admin.</p>
                             <div class="tech-tags">
                                 <span class="tech-tag">CodeIgniter</span>
@@ -170,7 +170,7 @@
                             <img src="project3.png" alt="Project Face Detection Thumbnail">
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">Face Mask Detection</h3>
+                            <h3 class="project-title">CRMonitoring</h3>
                             <p class="project-description">Mengembangkan sistem deteksi masker wajah secara real-time menggunakan Python dan Flask.</p>
                             <div class="tech-tags">
                                 <span class="tech-tag">Python</span>
